unpackaged/main/default/objects/GTM_Ticket__c/GTM_Ticket__c.object-meta.xml
<CustomObject>
    <label>GTM Ticket</label>
    <nameField>
        <label>GTM Ticket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GTM Tickets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>