unpackaged/main/default/objects/GTM_Ticket__c/fields/Assigned_At__c.field-meta.xml
<CustomField>
    <fullName>Assigned_At__c</fullName>
    <label>Assigned At</label>
    <type>Date</type>
</CustomField>