unpackaged/main/default/objects/GTM_Ticket__c/fields/Banner_Disrupt_Service_Decision_Details__c.field-meta.xml
<CustomField>
    <fullName>Banner_Disrupt_Service_Decision_Details__c</fullName>
    <description>Provides details as to why the internal decision was made to turn on a customer&#39;s expiration banner.

External Systems Utilization: Retool</description>
    <inlineHelpText>Provides details as to why the internal decision was made to turn on a customer&#39;s expiration banner.</inlineHelpText>
    <label>Banner Disrupt Service Decision Details</label>
    <type>TextArea</type>
</CustomField>