unpackaged/main/default/objects/GTM_Ticket__c/fields/Beneficiary_Teams__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Teams__c</fullName>
    <label>Beneficiary Teams</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Team</valueSetName>
    </valueSet>
</CustomField>