unpackaged/main/default/objects/GTM_Ticket__c/fields/Billing_Commentary_Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Commentary_Last_Updated_Date__c</fullName>
    <description>Date of the most recent updates to Billing Commentary.

Record Type: Collections</description>
    <inlineHelpText>Date of the most recent updates to Billing Commentary.</inlineHelpText>
    <label>Billing Commentary Last Updated Date</label>
    <type>Date</type>
</CustomField>