unpackaged/main/default/objects/GTM_Ticket__c/fields/Collections_Risk__c.field-meta.xml
<CustomField>
    <fullName>Collections_Risk__c</fullName>
    <description>Used for forecasting the level of risk involved collecting from the given customer.

External Systems Utilization: Retool</description>
    <inlineHelpText>Used for forecasting the level of risk involved collecting from the given customer.</inlineHelpText>
    <label>Collections Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Risk</fullName>
            </value>
            <value>
                <fullName>Low Risk</fullName>
            </value>
            <value>
                <fullName>Medium Risk</fullName>
            </value>
            <value>
                <fullName>High Risk</fullName>
            </value>
            <value>
                <fullName>Certain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>