unpackaged/main/default/objects/GTM_Ticket__c/fields/CRO_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>CRO_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not the CRO has sent an email to the customer regarding delinquent payments.

Record Type: Collections</description>
    <inlineHelpText>Indicates whether or not the CRO has sent an email to the customer regarding delinquent payments.</inlineHelpText>
    <label>CRO Email Sent</label>
    <type>Checkbox</type>
</CustomField>