unpackaged/main/default/objects/GTM_Ticket__c/fields/Days_Since_Last_Field_Commentary_Update__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Field_Commentary_Update__c</fullName>
    <description>Number of days between today and the date of the last Field Commentary update.

Record Type: Collections</description>
    <formula>TODAY() -  Field_Commentary_Last_Updated_Date__c</formula>
    <inlineHelpText>Number of days between today and the date of the last Field Commentary update.</inlineHelpText>
    <label>Days Since Last Field Commentary Update</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>