unpackaged/main/default/objects/GTM_Ticket__c/fields/Days_Since_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Update__c</fullName>
    <description>Number of days since the last update to `Next Step Date`.</description>
    <formula>TODAY()-Next_Step_Date__c</formula>
    <inlineHelpText>Number of days since the last update to `Next Step Date`.</inlineHelpText>
    <label>Days Since Last Update</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>