unpackaged/main/default/objects/GTM_Ticket__c/fields/Descope_Reason__c.field-meta.xml
<CustomField>
    <fullName>Descope_Reason__c</fullName>
    <label>Descope Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No longer needed</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Subsumed by another project</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>