unpackaged/main/default/objects/GTM_Ticket__c/fields/Descope_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Descope_Reason_Details__c</fullName>
    <label>Descope Reason Details</label>
    <type>TextArea</type>
</CustomField>