unpackaged/main/default/objects/GTM_Ticket__c/fields/Descoped_At__c.field-meta.xml
<CustomField>
    <fullName>Descoped_At__c</fullName>
    <label>Descoped At</label>
    <type>Date</type>
</CustomField>