unpackaged/main/default/objects/GTM_Ticket__c/fields/Disruption_of_Service_Comms_Sent__c.field-meta.xml
<CustomField>
    <fullName>Disruption_of_Service_Comms_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked TRUE if we communicated the disruption of service date with the customer.

External Systems Utilization: Retool</description>
    <inlineHelpText>Checked TRUE if we communicated the disruption of service date with the customer.</inlineHelpText>
    <label>Disruption of Service Comms Sent?</label>
    <type>Checkbox</type>
</CustomField>