unpackaged/main/default/objects/GTM_Ticket__c/fields/Doc__c.field-meta.xml
<CustomField>
    <fullName>Doc__c</fullName>
    <label>Doc</label>
    <type>Url</type>
</CustomField>