unpackaged/main/default/objects/GTM_Ticket__c/fields/Documentation_Link__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Link__c</fullName>
    <formula>Ticket_Definition__r.Documentation_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Documentation Link</label>
    <type>Text</type>
</CustomField>