unpackaged/main/default/objects/GTM_Ticket__c/fields/Due_Month__c.field-meta.xml
<CustomField>
    <fullName>Due_Month__c</fullName>
    <formula>DATE(YEAR(Due_Date__c),MONTH(Due_Date__c),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Month</label>
    <type>Date</type>
</CustomField>