unpackaged/main/default/objects/GTM_Ticket__c/fields/Due_Week__c.field-meta.xml
<CustomField>
    <fullName>Due_Week__c</fullName>
    <formula>CASE(MOD(Due_Date__c - DATE(1900, 1, 6), 7),
0, Due_Date__c + 0,
1, Due_Date__c + 6,
2, Due_Date__c + 5,
3, Due_Date__c + 4,
4, Due_Date__c + 3,
5, Due_Date__c + 2,
6, Due_Date__c + 1,
TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Week</label>
    <type>Date</type>
</CustomField>