unpackaged/main/default/objects/GTM_Ticket__c/fields/Epic_Business_Owner__c.field-meta.xml
<CustomField>
    <fullName>Epic_Business_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to assign a &#39;Business Owner&#39; to Epics.</description>
    <inlineHelpText>Used to assign a &#39;Business Owner&#39; to Epics.</inlineHelpText>
    <label>Epic: Business Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GTM_Tickets_Business_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>