unpackaged/main/default/objects/GTM_Ticket__c/fields/Epic_Next_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Epic_Next_Milestone__c</fullName>
    <description>Concise details as to the Epic&#39;s next milestone.</description>
    <inlineHelpText>Concise details as to the Epic&#39;s next milestone.</inlineHelpText>
    <label>Epic: Next Milestone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>