unpackaged/main/default/objects/GTM_Ticket__c/fields/Epic_Next_Milestone_Date__c.field-meta.xml
<CustomField>
    <fullName>Epic_Next_Milestone_Date__c</fullName>
    <description>Expected date of completion of the future Epic Milestone.</description>
    <inlineHelpText>Expected date of completion of the future Epic Milestone.</inlineHelpText>
    <label>Epic: Next Milestone Date</label>
    <type>Date</type>
</CustomField>