unpackaged/main/default/objects/GTM_Ticket__c/fields/Epic_Pct_Scoped__c.field-meta.xml
<CustomField>
    <fullName>Epic_Pct_Scoped__c</fullName>
    <description>Used on Epic record types to estimate the ratio of child tickets that have been created and associated with the Epic, against the total number of tickets that the Epic will have upon completion.</description>
    <inlineHelpText>Used on Epic record types to estimate the ratio of child tickets that have been created and associated with the Epic, against the total number of tickets that the Epic will have upon completion.</inlineHelpText>
    <label>Epic: % Scoped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>