unpackaged/main/default/objects/GTM_Ticket__c/fields/Epic_Total_Points__c.field-meta.xml
<CustomField>
    <fullName>Epic_Total_Points__c</fullName>
    <description>Rollup of the total number of points associated with the child tickets of a related Epic.</description>
    <inlineHelpText>Rollup of the total number of points associated with the child tickets of a related Epic.</inlineHelpText>
    <label>Epic: Total Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>