unpackaged/main/default/objects/GTM_Ticket__c/fields/Epic_Type__c.field-meta.xml
<CustomField>
    <fullName>Epic_Type__c</fullName>
    <defaultValue>&#39;Project&#39;</defaultValue>
    <description>Used to categorize Epics as either &#39;Projects&#39; or &#39;Ongoing&#39;</description>
    <inlineHelpText>Used to categorize Epics as either &#39;Projects&#39; or &#39;Ongoing&#39;</inlineHelpText>
    <label>Epic: Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>