unpackaged/main/default/objects/GTM_Ticket__c/fields/Estimated_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Sprint__c</fullName>
    <description>Estimated Sprint of the given Project/Task. Sprint values are added as they come up.</description>
    <inlineHelpText>Estimated Sprint of the given Project/Task. Sprint values are added as they come up.</inlineHelpText>
    <label>Estimated Sprint</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GTM_Ticket_Estimated_Sprint</valueSetName>
    </valueSet>
</CustomField>