unpackaged/main/default/objects/GTM_Ticket__c/fields/Expiration_Set_Banner_Turned_On__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Set_Banner_Turned_On__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked TRUE if the customer banner to expire access to Retool has been turned on.

External Systems Utilization: Retool</description>
    <inlineHelpText>Checked TRUE if the customer banner to expire access to Retool has been turned on.</inlineHelpText>
    <label>Expiration Set Banner Turned On?</label>
    <type>Checkbox</type>
</CustomField>