unpackaged/main/default/objects/GTM_Ticket__c/fields/Field_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Field_Commentary__c</fullName>
    <description>Notes left by sales during the collections process.

Record Type: Collections</description>
    <inlineHelpText>Notes left by sales during the collections process.</inlineHelpText>
    <label>Field Commentary</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>