unpackaged/main/default/objects/GTM_Ticket__c/fields/Field_Commentary_Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Field_Commentary_Last_Updated_Date__c</fullName>
    <description>Date of the most recent updates to Field Commentary.

Record Type: Collections</description>
    <inlineHelpText>Date of the most recent updates to Field Commentary.</inlineHelpText>
    <label>Field Commentary Last Updated Date</label>
    <type>Date</type>
</CustomField>