unpackaged/main/default/objects/GTM_Ticket__c/fields/Flow_Detail__c.field-meta.xml
<CustomField>
    <fullName>Flow_Detail__c</fullName>
    <label>Flow Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>