unpackaged/main/default/objects/GTM_Ticket__c/fields/Functional_Tags__c.field-meta.xml
<CustomField>
    <fullName>Functional_Tags__c</fullName>
    <label>Functional Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Deal Desk</fullName>
            </value>
            <value>
                <fullName>Demand Gen</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Enablement</fullName>
            </value>
            <value>
                <fullName>Renewals</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Pipeline Management</fullName>
            </value>
            <value>
                <fullName>Variable Comp</fullName>
            </value>
            <value>
                <fullName>ROE</fullName>
            </value>
            <value>
                <fullName>TAM</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Q2-23 Pricing Changes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>