unpackaged/main/default/objects/GTM_Ticket__c/fields/Has_Stale_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Has_Stale_Next_Step__c</fullName>
    <formula>Is_Closed__c = FALSE &amp;&amp;
Next_Step_Date__c &lt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Stale Next Step?</label>
    <type>Checkbox</type>
</CustomField>