unpackaged/main/default/objects/GTM_Ticket__c/fields/Impacted_Systems__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Systems__c</fullName>
    <label>Impacted Systems</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>DocuSign</fullName>
            </value>
            <value>
                <fullName>RevOps.io</fullName>
            </value>
            <value>
                <fullName>Intercom</fullName>
            </value>
            <value>
                <fullName>Outreach</fullName>
            </value>
            <value>
                <fullName>Endgame</fullName>
            </value>
            <value>
                <fullName>Hubspot</fullName>
            </value>
            <value>
                <fullName>Stripe</fullName>
            </value>
            <value>
                <fullName>Chili Piper</fullName>
            </value>
            <value>
                <fullName>Polytomic</fullName>
            </value>
            <value>
                <fullName>Hightouch</fullName>
            </value>
            <value>
                <fullName>Xactly</fullName>
            </value>
            <value>
                <fullName>LinkedIn Sales Navigator</fullName>
            </value>
            <value>
                <fullName>LinkedIn Sales Insights</fullName>
            </value>
            <value>
                <fullName>Klarity</fullName>
            </value>
            <value>
                <fullName>LeanData</fullName>
            </value>
            <value>
                <fullName>LaneFour</fullName>
            </value>
            <value>
                <fullName>Gong</fullName>
            </value>
            <value>
                <fullName>Clearbit</fullName>
            </value>
            <value>
                <fullName>Centro</fullName>
            </value>
            <value>
                <fullName>Whistic</fullName>
            </value>
            <value>
                <fullName>Drive Connector</fullName>
            </value>
            <value>
                <fullName>Calendly</fullName>
            </value>
            <value>
                <fullName>LeadGenius</fullName>
            </value>
            <value>
                <fullName>LeadIQ</fullName>
            </value>
            <value>
                <fullName>WorkRamp</fullName>
            </value>
            <value>
                <fullName>ZoomInfo</fullName>
            </value>
            <value>
                <fullName>Retool</fullName>
            </value>
            <value>
                <fullName>Champify</fullName>
            </value>
            <value>
                <fullName>Splash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>