unpackaged/main/default/objects/GTM_Ticket__c/fields/In_Active_Sprint__c.field-meta.xml
<CustomField>
    <fullName>In_Active_Sprint__c</fullName>
    <formula>TODAY() &gt;= Sprint_Start_Date__c &amp;&amp; TODAY() &lt;=  Sprint_End_Date__c</formula>
    <label>In Active Sprint?</label>
    <type>Checkbox</type>
</CustomField>