unpackaged/main/default/objects/GTM_Ticket__c/fields/In_Review_At__c.field-meta.xml
<CustomField>
    <fullName>In_Review_At__c</fullName>
    <description>Date stamp for when the ticket status changes to &#39;In Review&#39;.</description>
    <inlineHelpText>Date stamp for when the ticket status changes to &#39;In Review&#39;.</inlineHelpText>
    <label>In Review At</label>
    <type>Date</type>
</CustomField>