unpackaged/main/default/objects/GTM_Ticket__c/fields/Initial_Collections_Risk__c.field-meta.xml
<CustomField>
    <fullName>Initial_Collections_Risk__c</fullName>
    <description>Initial &#39;Collections Risk&#39; value that is populated the first time &#39;Collections Risk&#39; is set.</description>
    <inlineHelpText>Initial &#39;Collections Risk&#39; value that is populated the first time &#39;Collections Risk&#39; is set.</inlineHelpText>
    <label>Initial Collections Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Risk</fullName>
            </value>
            <value>
                <fullName>Low Risk</fullName>
            </value>
            <value>
                <fullName>Medium Risk</fullName>
            </value>
            <value>
                <fullName>High Risk</fullName>
            </value>
            <value>
                <fullName>Certain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>