unpackaged/main/default/objects/GTM_Ticket__c/fields/Is_Blocked__c.field-meta.xml
<CustomField>
    <fullName>Is_Blocked__c</fullName>
    <formula>NOT(ISBLANK(Blockers__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Blocked?</label>
    <type>Checkbox</type>
</CustomField>