unpackaged/main/default/objects/GTM_Ticket__c/fields/Is_Due_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Is_Due_This_Month__c</fullName>
    <formula>Due_Month__c=$User.Current_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Due This Month?</label>
    <type>Checkbox</type>
</CustomField>