unpackaged/main/default/objects/GTM_Ticket__c/fields/Is_Due_This_Week__c.field-meta.xml
<CustomField>
    <fullName>Is_Due_This_Week__c</fullName>
    <formula>Due_Week__c=$User.Current_Week__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Due This Week?</label>
    <type>Checkbox</type>
</CustomField>