unpackaged/main/default/objects/GTM_Ticket__c/fields/Is_Due_Today__c.field-meta.xml
<CustomField>
    <fullName>Is_Due_Today__c</fullName>
    <formula>TODAY()=Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Due Today?</label>
    <type>Checkbox</type>
</CustomField>