unpackaged/main/default/objects/GTM_Ticket__c/fields/Is_Late__c.field-meta.xml
<CustomField>
    <fullName>Is_Late__c</fullName>
    <formula>Days_Until_Due__c &lt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Late?</label>
    <type>Checkbox</type>
</CustomField>