unpackaged/main/default/objects/GTM_Ticket__c/fields/Is_Parent_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Is_Parent_Ticket__c</fullName>
    <formula>NOT(ISBLANK(Parent_Ticket__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Parent Ticket?</label>
    <type>Checkbox</type>
</CustomField>