unpackaged/main/default/objects/GTM_Ticket__c/fields/Linked_Channel_ID__c.field-meta.xml
<CustomField>
    <fullName>Linked_Channel_ID__c</fullName>
    <label>Linked Channel ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>