unpackaged/main/default/objects/GTM_Ticket__c/fields/Linked_Message_TS__c.field-meta.xml
<CustomField>
    <fullName>Linked_Message_TS__c</fullName>
    <label>Linked Message TS</label>
    <length>80</length>
    <type>Text</type>
</CustomField>