unpackaged/main/default/objects/GTM_Ticket__c/fields/NetSuite_Company__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NetSuite Company</label>
    <referenceTo>breadwinner_ns__BW_Company__c</referenceTo>
    <relationshipLabel>GTM Tickets</relationshipLabel>
    <relationshipName>GTM_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>