unpackaged/main/default/objects/GTM_Ticket__c/fields/NetSuite_Invoice__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NetSuite Invoice</label>
    <referenceTo>breadwinner_ns__BW_Invoice__c</referenceTo>
    <relationshipLabel>GTM Tickets</relationshipLabel>
    <relationshipName>GTM_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>