unpackaged/main/default/objects/GTM_Ticket__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>GTM Tickets</relationshipLabel>
    <relationshipName>GTM_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>