unpackaged/main/default/objects/GTM_Ticket__c/fields/Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Override_Reason__c</fullName>
    <description>Category related to &#39;RevOps Override Details&#39;.</description>
    <inlineHelpText>Category related to &#39;RevOps Override Details&#39;.</inlineHelpText>
    <label>Override Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collection No Longer Needed</fullName>
            </value>
            <value>
                <fullName>Committed to Pay</fullName>
            </value>
            <value>
                <fullName>Contract Restructure</fullName>
            </value>
            <value>
                <fullName>Invoice Correction</fullName>
            </value>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>Missing PO</fullName>
            </value>
            <value>
                <fullName>Payment Plan</fullName>
            </value>
            <value>
                <fullName>Portal Upload</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Updated Contact Details</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>