unpackaged/main/default/objects/GTM_Ticket__c/fields/Owner_Slack_ID__c.field-meta.xml
<CustomField>
    <fullName>Owner_Slack_ID__c</fullName>
    <label>Owner Slack ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>