unpackaged/main/default/objects/GTM_Ticket__c/fields/Owner_Subregion__c.field-meta.xml
<CustomField>
    <fullName>Owner_Subregion__c</fullName>
    <label>Owner Subregion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Geo_Subregion</valueSetName>
    </valueSet>
</CustomField>