unpackaged/main/default/objects/GTM_Ticket__c/fields/Parent_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Parent_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Ticket</label>
    <referenceTo>GTM_Ticket__c</referenceTo>
    <relationshipName>Ops_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>