unpackaged/main/default/objects/GTM_Ticket__c/fields/Parent_Ticket_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Parent_Ticket_Reporting__c</fullName>
    <formula>IF( Record_Type_Name__c = &#39;Task&#39;, &#39;Ongoing: Misc Tasks&#39;, Parent_Ticket__r.Short_Name__c )</formula>
    <label>Parent Ticket (Reporting)</label>
    <type>Text</type>
</CustomField>