unpackaged/main/default/objects/GTM_Ticket__c/fields/Problem__c.field-meta.xml
<CustomField>
    <fullName>Problem__c</fullName>
    <label>Problem</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>