unpackaged/main/default/objects/GTM_Ticket__c/fields/Requestor_Department__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Department__c</fullName>
    <label>Requestor Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Department</valueSetName>
    </valueSet>
</CustomField>