unpackaged/main/default/objects/GTM_Ticket__c/fields/Requestor_Level__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Level__c</fullName>
    <label>Requestor Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Level</valueSetName>
    </valueSet>
</CustomField>