unpackaged/main/default/objects/GTM_Ticket__c/fields/Requestor_Territory__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Territory__c</fullName>
    <label>Requestor Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Territory</valueSetName>
    </valueSet>
</CustomField>