unpackaged/main/default/objects/GTM_Ticket__c/fields/Revisit_Date__c.field-meta.xml
<CustomField>
    <fullName>Revisit_Date__c</fullName>
    <label>Revisit Date</label>
    <type>Date</type>
</CustomField>