unpackaged/main/default/objects/GTM_Ticket__c/fields/Revisit_Details__c.field-meta.xml
<CustomField>
    <fullName>Revisit_Details__c</fullName>
    <label>Revisit Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>