unpackaged/main/default/objects/GTM_Ticket__c/fields/RevOps_Writeoff_Override__c.field-meta.xml
<CustomField>
    <fullName>RevOps_Writeoff_Override__c</fullName>
    <description>Used by RevOps team to manually adjust Accounting writeoff forecasts.</description>
    <inlineHelpText>Used by RevOps team to manually adjust Accounting writeoff forecasts.</inlineHelpText>
    <label>RevOps Writeoff Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>