unpackaged/main/default/objects/GTM_Ticket__c/fields/Run_New_Ticket_Slack_Automations__c.field-meta.xml
<CustomField>
    <fullName>Run_New_Ticket_Slack_Automations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run New Ticket Slack Automations?</label>
    <type>Checkbox</type>
</CustomField>