unpackaged/main/default/objects/GTM_Ticket__c/fields/Sensitivity_Level__c.field-meta.xml
<CustomField>
    <fullName>Sensitivity_Level__c</fullName>
    <label>Sensitivity Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GTM_Ticket_Sensitivity_Levels</valueSetName>
    </valueSet>
</CustomField>