unpackaged/main/default/objects/GTM_Ticket__c/fields/Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Short_Name__c</fullName>
    <label>Short Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>